[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://Scripts/Items/Pickup.gd" id="1_7fqgx"]
[ext_resource type="PackedScene" path="res://Prefabs/Items/Base/MushroomPickup2D.tscn" id="2_stvy1"]
[ext_resource type="Texture2D" uid="uid://c0hvdhgcagosg" path="res://Textures/Atlas/OneUpMushroom_AtlasTexture.tres" id="3_3aevp"]

[node name="OneUpMushroom" type="Node2D"]
script = ExtResource("1_7fqgx")
type = 3

[node name="Body" parent="." instance=ExtResource("2_stvy1")]

[node name="Sprite2D" parent="Body" index="0"]
texture = ExtResource("3_3aevp")

[connection signal="mushroom_despawned" from="Body" to="." method="on_body_despawned"]

[editable path="Body"]
