[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://Scripts/Items/Pickup.gd" id="1_5cs27"]
[ext_resource type="PackedScene" path="res://Prefabs/Items/Base/LeafPickup2D.tscn" id="2_jhojx"]

[node name="SuperLeaf" type="Node2D"]
script = ExtResource("1_5cs27")
type = 2

[node name="Body" parent="." instance=ExtResource("2_jhojx")]

[connection signal="leaf_despawned" from="Body" to="." method="on_body_despawned"]
